# monitorRedis

./: .gitignore  Cargo.toml
collect/: .gitignore  Cargo.toml
collect/collect_server/: Cargo.toml
collect/collect_server/src/: args.rs  db_info.rs  errors.rs  executor.rs  global.rs  interval.rs  main.rs  thread_pool.rs
collect/collect_server/src/collector/: mod.rs  redis.rs
collect/collect_server/src/collector/redis/: collect_handle.rs
collect/collect_server/src/config/: mod.rs
collect/collect_server/src/threads/: builder.rs  errs.rs  executor.rs  mod.rs
collect/collect_server/src/typed/: fns.rs  mod.rs  redis_config.rs  worker.rs
collect/collect_server/src/utils/parsing/: mod.rs
collect/collect_server/src/utils/parsing/redis_res/: cluster_nodes.rs  info_commandstats.rs  info_cpu.rs  info_keyspace.rs  info_stat.rs  key_usage_top_ten_hundred.rs  mod.rs
collect/collect_server/src/worker/: mod.rs
collect/collect_server/src/worker/collect/: client_list_worker.rs  cluster_nodes_worker.rs  config_get_all_worker.rs  db_size_worker.rs  info_commandstats_worker.rs  info_cpu_worker.rs  info_keyspace_worker.rs  info_memory_worker.rs  info_stats_worker.rs  key_usage_top_one_hundred_worker.rs  mod.rs  ping_status_worker.rs
collect/dbs/: Cargo.toml
collect/dbs_cmd/: build.rs
collect/logger/: Cargo.toml
collect/thread_pool/: Cargo.toml
collect/utils/: Cargo.toml
collect_query/: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
dbs_cmd/: build.rs
parsing/: Cargo.toml
restapi/: go.mod  main.go
webapp/: .gitignore  package.json  tsconfig.base.json
(+153 files in other folders)
