[package]
name = "collect_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = {path = "../core"}
dbs = {path = "../dbs"}
dbs_cmd = {path = "../dbs_cmd"}
logger = {path = "../logger"}
parsing = {path = "../parsing"}

serde_json = "1.0.116"
serde = "1.0.198"
once_cell = "1.19.0"