[package]
name = "collect_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = {path = "../core"}
dbs = {path = "../dbs"}
dbs_cmd = {path = "../dbs_cmd"}
logger = {path = "../logger"}
utils = {path = "../utils"}
thread_pool = {path = "../thread_pool"}

serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
once_cell = "1.19.0"
chrono = "0.4.38"
log = "0.4.21"

[features]
runTest = []